--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -69,6 +69,9 @@ section {}
         @media (max-width:920px) {
             gap: 20px;
         }
+        @media (max-width:480px) {
+            top: -20px;
+        }
     }
 
     &__slider {
