--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -56,6 +56,9 @@
             padding-bottom: 20px;
 
         }
+        @media (max-width:480px) {
+            max-width: 90%;
+        }
     }
 
     &__slider {
@@ -290,6 +293,9 @@
 
     @media (max-width:720px) {
         right: 0px;
+    }
+    @media (max-width:480px) {
+        gap: 0px;
     }
 }
 
