--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -1,11 +1,12 @@
 .news {
     background-color: white;
-    
+
     &__container {
-       padding: 72px 0;
-       @media (max-width:480px) {
-        padding: 38px 0;
-       }
+        padding: 72px 0;
+
+        @media (max-width:480px) {
+            padding: 38px 0;
+        }
     }
 
     &__list {
@@ -13,18 +14,35 @@
         grid-template-columns: repeat(3, 1fr);
         row-gap: 32px;
         column-gap: 24px;
-        @media(max-width:960px){
+
+        @media(max-width:960px) {
             grid-template-columns: repeat(2, 1fr);
         }
-        @media(max-width:480px){
+
+        @media(max-width:480px) {
             grid-template-columns: 1fr;
         }
     }
 
     &__elem {
+        cursor: pointer;
+        border-radius: 24px;
+        transition: 200ms;
+
         img {
             max-width: 100%;
             border-radius: 24px;
+        }
+
+        &:hover {
+            box-shadow: 0 0 0 20px red;
+            background-color: red;
+            transform: scale(1.03);
+
+            p {
+                color: white;
+            }
+
         }
     }
 
@@ -32,7 +50,8 @@
         padding: 16px 0 4px;
         max-width: 90%;
     }
-    &__showmore{
+
+    &__showmore {
         padding-top: 32px;
         display: flex;
         justify-content: center;
