hover event news and new btn reed-more

--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -35,13 +35,13 @@
         }
 
         &:hover {
-            box-shadow: 0 0 0 20px red;
-            background-color: red;
+           // box-shadow: 0 0 0 20px red;
+            // background-color: red;
             transform: scale(1.03);
 
-            p {
-                color: white;
-            }
+            // p {
+            //     color: white;
+            // }
 
         }
     }
