--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -268,14 +268,17 @@
     position: relative;
     background-color: red;
     color: white;
-    padding: 10px 30px 10px 10px;
+    padding-left: 10px;
     display: flex;
     align-items: center;
+    height: 37px;
 
     &:hover {
         box-shadow: inset 0 -38px 0 0 white;
 
         .reed-arrow {
+
+
             &:after {
                 background-color: red;
             }
@@ -285,82 +288,86 @@
             }
         }
     }
-        .reed-arrow {
-            &:after {
-                content: "";
-                position: absolute;
-                transform: rotate(45deg);
-                right: 10px;
-                height: 2px;
-                width: 10px;
-                top: 40%;
 
-                background-color: white;
+    .reed-arrow {
+        width: 35px;
+        aspect-ratio: 1 / 1;
 
-            }
+        &:after {
+            content: "";
+            position: absolute;
+            transform: rotate(45deg);
+            right: 10px;
+            height: 2px;
+            width: 10px;
+            top: 40%;
 
-            &:before {
-                
-                content: "";
-                position: absolute;
-                transform: rotate(135deg);
-                right: 10px;
-                height: 2px;
-                width: 10px;
-                bottom: 40%;
-                background-color: white;
+            background-color: white;
 
-            }
         }
 
-    }
+        &:before {
 
-    .arrows {
-        position: absolute;
-        top: 32px;
-        right: 32px;
-        width: 88px;
-        display: flex;
-        justify-content: flex-end;
-        gap: 8px;
+            content: "";
+            position: absolute;
+            transform: rotate(135deg);
+            right: 10px;
+            height: 2px;
+            width: 10px;
+            bottom: 40%;
+            background-color: white;
 
-        @media (max-width:720px) {
-            right: 0px;
-        }
-
-        @media (max-width:480px) {
-            gap: 0px;
         }
     }
 
-    .arrow {
-        width: 40px;
-        aspect-ratio: 1/1;
-        background: transparent;
-        border: unset;
-        cursor: pointer;
+}
+
+.arrows {
+    position: absolute;
+    top: 32px;
+    right: 32px;
+    width: 88px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 8px;
+
+    @media (max-width:720px) {
+        right: 0px;
     }
 
-    .arrow.disable {
-        opacity: 0.2;
+    @media (max-width:480px) {
+        gap: 0px;
     }
+}
 
-    .social {
-        display: flex;
-        gap: 10px;
-        align-items: center;
+.arrow {
+    width: 40px;
+    aspect-ratio: 1/1;
+    background: transparent;
+    border: unset;
+    cursor: pointer;
+}
+
+.arrow.disable {
+    opacity: 0.2;
+}
+
+.social {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.social-icon {
+    width: 32px;
+    aspect-ratio: 1/1;
+    background-color: var(--mainRed);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+
+    &:hover {
+        background-color: black;
     }
-
-    .social-icon {
-        width: 32px;
-        aspect-ratio: 1/1;
-        background-color: var(--mainRed);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 10px;
-
-        &:hover {
-            background-color: black;
-        }
-    }
+}
