--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -317,9 +317,10 @@ p {
   position: relative;
   background-color: red;
   color: white;
-  padding: 10px 30px 10px 10px;
+  padding-left: 10px;
   display: flex;
   align-items: center;
+  height: 37px;
 }
 .reed-more:hover {
   box-shadow: inset 0 -38px 0 0 white;
@@ -329,6 +330,10 @@ p {
 }
 .reed-more:hover .reed-arrow:before {
   background-color: red;
+}
+.reed-more .reed-arrow {
+  width: 35px;
+  aspect-ratio: 1/1;
 }
 .reed-more .reed-arrow:after {
   content: "";
