--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -268,11 +268,14 @@
     position: relative;
     background-color: red;
     color: white;
-    padding-left: 10px;
+  
     display: flex;
     align-items: center;
+    
     height: 37px;
-
+    span{
+        padding: 0 10px;
+    }
     &:hover {
         box-shadow: inset 0 -38px 0 0 white;
 
@@ -290,14 +293,16 @@
     }
 
     .reed-arrow {
-        width: 35px;
+        width: 22px;
         aspect-ratio: 1 / 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         &:after {
             content: "";
             position: absolute;
             transform: rotate(45deg);
-            right: 10px;
             height: 2px;
             width: 10px;
             top: 40%;
@@ -311,7 +316,6 @@
             content: "";
             position: absolute;
             transform: rotate(135deg);
-            right: 10px;
             height: 2px;
             width: 10px;
             bottom: 40%;
