--- a/src/scss/_map.scss
+++ b/src/scss/_map.scss
@@ -19,3 +19,28 @@ span.inline-image._loaded.map-circle-placemark__placemark svg {
     padding-top: 11px;
     padding-bottom: 11px;
 }
+
+#mapyandex * {
+    transition: none;
+}
+
+#mapyandex {
+    width: 100%;
+    height: 620px;
+}
+ymaps.ymaps-2-1-79-svg-icon{
+    background-image: url('/src/img/map.png')!important;
+    width: 20px !important;
+    aspect-ratio: 1 / 1;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    left: 5px!important;
+}
+ymaps.ymaps-2-1-79-islets_icon-caption {
+    background-color: white;
+    padding-left: 30px !important;
+    border-radius: 24px;
+    font-family: Golos Text!important;
+    font-weight: 500;
+}
